tests/invalid/simple/ListAppend_Invalid_1.whiley
void System::main([string] args):
    [string] r = args + [1]
    print str(r)
